# HPScrapper

./: CMakeLists.txt  CurlEasyHandle.hpp  CurlMultiWrapper.hpp  IdleWrapper.hpp  LICENSE  README.md  TimerWrapper.hpp  main.cpp
.github/workflows/: build.yml  cmake-single-platform.yml
examples/: example1.cpp  example2.cpp  example3.cpp  example4.cpp
include/async/: CheckWrapper.hpp  Event.hpp  EventDispatcher.hpp  EventLoop.hpp  HandleWrapperBase.hpp
include/net/: CurlEasyHandle.hpp  URLRequestManager.hpp
include/parser/: Node.hpp  NodeList.hpp  Parser.hpp
src/: Document.hpp  DomCollection.hpp  HBscraper.cpp  HBscraper.hpp  Node.hpp  PollWrapper.hpp  PrepareWrapper.hpp  main.cpp
src/async/: PollWrapper.hpp
src/net/: CurlHandlePool.hpp
